--- a/practic.css
+++ b/practic.css
@@ -18,12 +18,10 @@ body{
     
 }
 .child{
-    width: 50px;
-    height: 50px;
+    width: 10px;
+    height: 3px;
     background-color: black;
     position: absolute;
-    top: 20%;
-    right: 5%;
-    transform: translate(5%, 20%);
+    transform: translateY()
    
 }
