--- a/style.css
+++ b/style.css
@@ -109,21 +109,20 @@
         margin: 0;
         width: 100%;
         position: absolute;
-        top: 100%;
-        opacity: 1;
-        transition: all 0.5s ease;
+        top: -1000px;
+        opacity: 0;
+        transition: all 1s ease;
         height: 50vh;
         z-index: -1;
         background-color: #131313;
+        font-size: 1.6rem
     }
-    .navbar.menu.active{
-        background-color: #131313;
+    .navbar__menu.active{
         top: 100%;
         opacity: 1;
         transition: all 0.5s ease;
         z-index: 99;
-        height: 50vh;
-        font-size: 1.6rem
+        
     }
     #navbar__logo{
         padding-left: 25px;
@@ -170,6 +169,16 @@
 .navbar__toggle .bar{
     display: block;
     cursor: pointer;
+}
+
+#mobile-menu.is-active .bar:nth-child(2){
+    opacity: 0;
+}
+#mobile-menu.is-active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg)
+}
+#mobile-menu.is-active .bar:nth-child(3){
+    transform: translateY(-8px) rotate(-45deg)
 }
     
 }
