--- a/practic.css
+++ b/practic.css
@@ -8,20 +8,23 @@ body{
     
 }
 .box{
+    display: flex;
     background: yellow;
     margin: 10px;
     padding: 10px;
     width: 200px;
     height: 200px;
     position: relative;
+    justify-self: center
    
     
 }
 .child{
-    width: 10px;
-    height: 3px;
+    width: 20px;
+    height: 20px;
     background-color: black;
-    position: absolute;
-    transform: translateY()
+    margin: 10px;
+    justify-self: center;
+    
    
 }
