--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@
     font-size: 2rem;
   
 }
+
+.fa-gem{
+    margin-right: 0.5rem;
+}
 .navbar__menu{
     display: flex;
     align-items: center;
@@ -183,3 +187,251 @@
     
 }
 
+/* Hero Section CSS */
+.main{
+    background-color: #141414;
+}
+
+.main__container {
+    background-color: #141414;
+    height: 90vh;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0 auto;
+    padding: 0 50px;
+    align-items: center;
+    max-width: 1300px;
+    z-index: 1;
+    
+}
+
+.main__content h1{
+    font-size: 4rem;
+    background-color: #ff8177;
+    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+.main__content h2{
+    font-size: 4rem;
+    background-color: #ff8177;
+    background-image: linear-gradient(to top, #b721ff 0%, #21d4fd 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.main__content p {
+    color: #fff;
+    margin-top: 1rem;
+    font-size: 2rem;
+    font-weight: 700;
+    
+}
+
+.main__btn {
+    font-size: 2rem;
+    background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
+    padding: 14px 32px;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+
+    margin-top: 2rem;
+    cursor: pointer;
+    position: relative;
+    transition: all 0.35s;
+
+}
+.main__btn a {
+    position: relative;
+    z-index: 2;
+    color: #fff;
+    text-decoration: none;
+}
+
+.main__btn::after{
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    width: 0%;
+    height: 100%;
+    background: #4837ff;
+    transition: all 0.35s;
+    border-radius: 4px;
+
+}
+.main__btn:hover::after{
+    width: 100%
+}
+.main__img--container{
+    text-align: center;
+}
+#main__img{
+    width: 80%;
+    height: 80%
+}
+
+/* mobile Responsive */
+
+@media screen and (max-width: 768px) {
+    .main__container {
+        display: grid;
+        grid-template-columns: auto;
+        align-items: center;
+        justify-self: center;
+        width: 100%;
+        margin: 0 auto;
+        height: 90vh;
+    }
+    .main__content {
+        text-align: center;
+        margin-bottom: 4rem
+    }
+    .main__content h1 {
+        font-size: 2.5rem;
+        margin-top: 2rem
+    }
+    .main__content h2 {
+        font-size: 3rem
+    }
+    .main__content p{
+        font-size: 1.5rem;
+        margin-top: 1rem
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .main__content h1 {
+        font-size: 2rem;
+        margin-top: 3rem
+    }
+    .main__content h2 {
+        font-size: 2rem
+    }
+    .main__content p{
+        font-size: 1.5rem;
+        margin-top: 2rem
+    }
+    .main__btn {
+        padding: 12px 36px;
+        margin: 2.5rem 0
+    }
+}
+
+/* Services Section */
+.services {
+    background-color: #141414;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
+.services h1 {
+    background-color: #ff8177;
+    background-image: linear-gradient(
+        to right,
+        #ff8177 0%,
+        #ff867a 0%,
+        #ff8c7f 21%,
+        #f99185 52%,
+        #cf556c 78%,
+        #b12a5b 100%
+    );
+    background-size: 100%;
+    margin-bottom: 5rem;
+    font-size: 2.5rem;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.services__container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.services__card {
+    width: 480px;
+    height: 525px;
+    margin: 1rem;
+    border-radius: 4px;
+    background-image: linear-gradient(
+        to bottom, rgba(0,0,0,0) 0%,
+        rgba(17, 17,17,0.6) 100%
+    ), url('images/pic2.jpg');
+    background-size: cover;
+    position: relative;
+    color: #fff
+}
+
+.services__card:nth-child(2) {
+    background-image: linear-gradient(
+        to bottom, rgba(0,0,0,0) 0%,
+        rgba(17, 17,17,0.6) 100%
+    ), url('images/pic3.jpg');
+}
+
+.services h2 {
+    position: absolute;
+    top: 350px;
+    left: 30px;
+}
+
+.services__card p {
+    position: absolute;
+    top: 400px;
+    left:30px;
+}
+
+.services__card button {
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    background: #f77062;
+    position: absolute;
+    top: 440px;
+    left: 30px;
+    font-size: 1rem;
+    cursor: pointer
+}
+
+.services__card:hover {
+    transform: scale(1.075);
+    transition: 0.2s ease-in;
+    cursor: pointer
+}
+
+@media screen and (max-width: 960px) {
+    .services {
+        height: 1600px;
+    }
+    .services h1 {
+        font-size: 2rem;
+        margin-top: 12rem
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .services {
+        height: 1400px;
+    
+    }
+
+    .services h1 {
+        font-size: 1.2rem;
+    }
+    .services__card{
+        width: 300px;
+    }
+}
